# portfolio-management

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
branch-cleanup/: AI_POWERTOOLS_RECONCILIATION.md  CROSS_MACHINE_EXECUTION_RUNBOOK.md  HANDOVER_TO_COPILOT.md  MAC_DEV_MACHINE_SYNC_20260228.md  README.md  SAFETY_PROTOCOL.md  audit-local-branches.sh  branch_cleanup_report.json  branch_cleanup_summary.csv  branch_management_guide.md  cleanup-execution-20260228.tsv  cleanup_branches.sh
docs/research/: MCP_INTEGRATION_PLAN.md
mcp_servers/: scanner_server.py
src/: cache.py  github_scanner.py  health_scorer.py
src/portfolio_manager/: __init__.py  cli.py  config.py  coordinator.py  models.py  prioritizer.py  scanner.py
tests/: __init__.py  conftest.py  test_coordinator.py  test_models.py  test_prioritizer.py  test_scanner.py
tests/unit/: test_cache.py  test_github_scanner.py  test_health_scorer.py
